tests/EtaX/EtaX.methF0/EtaX.methF0.2.13-head.check
// exitCode: 0   val t1a: () => Any = methF0                // ok, eta-expansion
// exitCode: 0   val t1b: () => Any = { val t = methF0; t } // `()`-insert b/c no expected type
// exitCode: 0   val t1c: () => Any = methF0 _              // ok, explicit eta-expansion requested
// exitCode: 0   val t1d: Any       = methF0 _              // ok, explicit eta-expansion requested
// exitCode: 1   val t1e: Any       = methF0() _            // error: _ must follow method
target/tests/EtaX/EtaX.methF0/EtaX.methF0/EtaX.methF0.04.scala:10: error: _ must follow method; cannot follow () => String
  val t1e: Any       = methF0() _            // error: _ must follow method
                             ^
1 error
